# data-buddy

./: .gitignore  design_notebook.md  my_data_architecture.drawio  predefined_objects.json
docs/: data_buddy_architecture.drawio  design_notebook.md  info_harmonizer_architecture.drawio
producers/amazon_extension/: manifest.json  old_manifest.json.do_not_use
producers/amazon_extension/popup/: popup.html
producers/amazon_extension/scripts/: content.js
producers/browser_plugins/az_order_extractor/: package-lock.json  package.json  tsconfig.json  webpack.config.background.js  webpack.config.inject.js  webpack.config.js  webpack.config.popup.js
producers/db_file_parser/: db_file_parser.py
producers/db_file_parser/finance/: mint_transactions.py
producers/file_parser/: common.py  file_parser.py  setup.py
producers/file_parser/file_parser/: __init__.py  common.py  main.py
producers/file_parser/finance/: finance_common.py  mint_transactions.py
producers/file_parser/tests/: fake_intuit_mint_data.csv  file_parser_reg_tester.py  mint_data_generator.py  out.txt
service/: CMakeLists.txt
service/api-libs/: service_api_lib.py
service/api_libs/: service_api_lib.ts
service/api_libs/service_api_lib_py_mod/: requirements.txt  setup.py
service/api_libs/service_api_lib_py_mod/service_api_lib.egg-info/: PKG-INFO  SOURCES.txt
service/src/: App.cpp  AppComponent.hpp  Common.cpp  Common.hpp
service/src/controller/: Controller.cpp  Controller.hpp  MyController.hpp  RocksWrapper.hpp
service/src/dto/: DTOs.hpp
service/tests/: aes  aes_encryption.cpp  boost_test_init.cpp  db_test  out  out.txt  rocks_db_test.cpp  service_api_lib.py  service_reg_tester.py  service_tester.py  wt_test.cpp
service/tests/json_tester/: a.out  json_tester.cpp  test
(+23 files in other folders)
